Update tests to run with verifier on
Reviewed-by: mchung